# mr-to-pct

./: .pre-commit-config.yaml  setup.cfg
notebooks/: mr-to-pct_infer.ipynb
src/mr2ct/: mr2ct.py
src/mr2ct/utils/: infer_funcs.py  netdef.py
