[metadata]
name = mr2ct
version = 0.1.0
requires-python = ">=3.8"

[options]
package_dir=
    =src
packages=find:
install_requires =
    antspyx
    matplotlib
    monai
    SimpleITK
    typer

[options.packages.find]
where=src

[options.extras_require]
dev =
    build
    mypy
    pytest

[options.entry_points]
console_scripts =
    mr2ct = mr2ct.mr2ct:main

[mypy]
disallow_untyped_defs = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true
show_column_numbers = true
show_error_codes = true

[mypy-scipy.*,setuptools,torch,mpl_toolkits.*,ants]
ignore_missing_imports = true
